--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Adam Duhamel</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Adams page</title>
+    </head>
+    <body>
+        <h2>this is my page</h2>
+        <p>Adam Duhamel</p>
+    </body>
+</html>
+
