added a stylesheet with a h2 color

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Adams page</title>
+        <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
         <h2>this is my page</h2>
