added a header and footer and structured main also edited style

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Adams page</title>
+        <title>My Love -*- Rae</title>
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h2>this is my page</h2>
-        <p>Adam Duhamel</p>
+        <header>
+            <h3 class="rachel">My future wife, my partner, my besfriend, and soulmate</h3>
+            <p class="adam">I believe you deserve some recognition. 
+                You've supported me, been totally flustered by me, and you're still here, 
+                still loving me unconditionally. I couldnt ask for more.</p>
+        </header>
+
+        <main>
+            <article>
+            </article>
+
+            <article>
+            </article>
+
+            <article>
+            </article>
+
+            <article>
+            </article>
+
+            <article>
+            </article>
+
+            <article>
+            </article>
+
+            <article>
+            </article>
+        </main>
+
+        <footer>
+            <p>&#169;Adam Duhamel</p>
+        </footer>
     </body>
 </html>
 
