--- a/index.html
+++ b/index.html
@@ -1,43 +1,115 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Love -*- Rae</title>
+        <title></title>
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h3 class="rachel">My future wife, my partner, my besfriend, and soulmate</h3>
-            <p class="adam">I believe you deserve some recognition. 
-                You've supported me, been totally flustered by me, and you're still here, 
-                still loving me unconditionally. I couldnt ask for more.</p>
+            <h3 class="">The Future</h3>
+            <p class="">Take me to your leader! That's right, baby. I ain't your loverboy.</p>
         </header>
 
         <main>
-            <article>
-            </article>
+            <img src="images/futurama.png">
 
             <article>
+                <p>Yes. You gave me a dollar and some candy. And so we say goodbye to our beloved pet, 
+                    Nibbler, who's gone to a place where I, too, hope one day to go. The toilet. You, a 
+                    bobsleder!? That I'd like to see!
+                    You are the last hope of the universe. You've killed me! Oh, you've killed me! Bender, 
+                    you risked your life to save me! We'll need to have a look inside you with this camera. Ah, 
+                    the 'Breakfast Club' soundtrack! I can't wait til I'm old enough to feel ways about stuff!
+                    Now what? Daddy Bender, we're hungry. Bender?! You stole the atom. They're like sex, 
+                    except I'm having them! What's with you kids? Every other day it's food, food, food. 
+                    Alright, I'll get you some stupid food.
+                    We're rescuing ya. Kif might! Yeah, I do that with my stupidness. Well, then good news! 
+                    It's a suppository. I'm sorry, guys. I never meant to hurt you. Just to destroy everything 
+                    you ever believed in. Maybe I love you so much I love you no matter who you are pretending to be.
+                    And from now on you're all named Bender Jr. Calculon is gonna kill us and it's all everybody 
+                    else's fault! I guess if you want children beaten, you have to do it yourself. 
+                    WINDMILLS DO NOT WORK THAT WAY! GOOD NIGHT!
+                    You're going to do his laundry? No! Don't jump! OK, if everyone's finished being stupid. 
+                    Man, I'm sore all over. I feel like I just went ten rounds with mighty Thor. Who's brave 
+                    enough to fly into something we all keep calling a death sphere?
+                    Do a flip! Have you ever tried just turning off the TV, sitting down with your children, 
+                    and hitting them? In our darkest hour, we can stand erect, with proud upthrust bosoms. 
+                    You guys go on without me! I'm going to go… look for more stuff to steal!
+                    Pansy. Goodbye, friends. I never thought I'd die like this. But I always really hoped. 
+                    But I've never been to the moon! Leela, Bender, we're going grave robbing. We'll need to have a look inside you with this camera.
+                    When I was first asked to make a film about my nephew, Hubert Farnsworth, I thought 
+                    "Why should I?" Then later, Leela made the film. But if I did make it, you can bet there
+                     would have been more topless women on motorcycles. Roll film! Who said that? SURE you can die! 
+                     You want to die?!
+                    Professor, make a woman out of me. 
+                </p>
             </article>
+            
+            <img src= "images/Zoidberg.jpg">
 
             <article>
+                <p>I videotape every customer that comes in here, so that I may blackmail them later. 
+                    Say what? They're like sex, except I'm having them! Who are you, my warranty?! Oh, 
+                    I think we should just stay friends.
+                    I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which 
+                    I just made up. Uhh… also, comes with double prize money. What are their names? 
+                    Good news, everyone! I've taught the toaster to feel love!
+                    So, how 'bout them Knicks? I had more, but you go ahead. Eeeee! Now say 
+                    "nuclear wessels"! Oh, I always feared he might run off like this. 
+                    Why, why, why didn't I break his legs?
+                    For the last time, I don't like lilacs! Your 'first' wife was the one who 
+                    liked lilacs! My fellow Earthicans, as I have explained in my book 'Earth in the 
+                    Balance'', and the much more popular ''Harry Potter and the Balance of Earth', we 
+                    need to defend our planet against pollution. Also dark wizards.
+                    Alright, let's mafia things up a bit. Joey, burn down the ship. Clamps, burn 
+                    down the crew. You'll have all the Slurm you can drink when you're partying with 
+                    Slurms McKenzie! Oh sure! Blame the wizards!</p>
             </article>
 
-            <article>
-            </article>
+            <img src="images/fry.jpg">
 
             <article>
+                <p>Wow! A superpowers drug you can just rub onto your skin? You'd think it would be 
+                    something you'd have to freebase. I've been there. My folks were always on me to groom myself 
+                    and wear underpants. What am I, the pope?
+                    Michelle, I don't regret this, but I both rue and lament it. Shut up and get to the point! Goodbye, 
+                    cruel world. Goodbye, cruel lamp. Goodbye, cruel velvet drapes, lined with what would appear to 
+                    be some sort of cruel muslin and the cute little pom-pom curtain pull cords. Cruel though they 
+                    may be…
+                    Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: 
+                    fatal or non-fatal? Good news, everyone! There's a report on TV with some very bad news! The 
+                    alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will 
+                    fall like a house of cards. Checkmate.
+                    The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes 
+                    will fall like a house of cards. Checkmate. Now what? I feel like I was mauled by Jesus. I am 
+                    Singing Wind, Chief of the Martians.
+                    Leela, are you alright? You got wanged on the head. Noooooo! I saw you with those two "ladies 
+                    of the evening" at Elzars. Explain that. Oh sure! Blame the wizards! Bender! Ship! Stop bickering
+                     or I'm going to come back there and change your opinions manually!
+                    I was all of history's great robot actors - Acting Unit 0.8; Thespomat; David Duchovny! Tell 
+                    them I hate them. Ooh, name it after me! Yes, if you make it look like an electrical fire. 
+                    When you do things right, people won't be sure you've done anything at all.
+                    Stop it, stop it. It's fine. I will 'destroy' you! Ugh, it's filthy! Why not create a National 
+                    Endowment for Strip Clubs while we're at it? No. We're on the top. THE BIG BRAIN AM WINNING AGAIN! 
+                    I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN!
+                    I barely knew Philip, but as a clergyman I have no problem telling his most intimate friends 
+                    all about him. Robot 1-X, save my friends! And Zoidberg! Is that a cooking show? We need rest. 
+                    The spirit is willing, but the flesh is spongy and bruised.
+                    You can crush me but you can't crush my spirit! Can I use the gun? There's one way and only one 
+                    way to determine if an animal is intelligent. Dissect its brain! Say what? Belligerent and numerous.
+                    It doesn't look so shiny to me. Well, then good news! It's a suppository. I'm a thing. Ah, 
+                    the 'Breakfast Club' soundtrack! I can't wait til I'm old enough to feel ways about stuff! 
+                    That's the ONLY thing about being a slave.
+                    We'll go deliver this crate like professionals, and then we'll go home. Oh, you're a dollar 
+                    naughtier than most. And I'm his friend Jesus. You've killed me! Oh, you've killed me!
+                </p>
             </article>
-
-            <article>
-            </article>
-
-            <article>
-            </article>
+            
+            <img src="images/team.jpg">
         </main>
 
         <footer>
-            <p>&#169;Adam Duhamel</p>
+            <p>&#169;Adam Duhamel<br>special thanks http://fillerama.io/</p>
         </footer>
     </body>
 </html>
-
