changed a little styling added a link

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Futurrrrrrrrrrrrrrrrrrrre</title>
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h3 class="">The Future</h3>
-            <p class="">Take me to your leader! That's right, baby. I ain't your loverboy.</p>
+            <h2 class="leela">The Future</h2>
+            <p class="leela">Take me to your leader! That's right, baby. I ain't your loverboy.</p>
         </header>
 
         <main>
-            <img src="images/futurama.png">
+            <img src="images/futurama.png" alt="Futurama">
 
             <article>
                 <p>Yes. You gave me a dollar and some candy. And so we say goodbye to our beloved pet, 
@@ -45,9 +45,9 @@
                 </p>
             </article>
             
-            <img src= "images/Zoidberg.jpg">
+            <img src= "images/Zoidberg.jpg" alt="Zoidberg">
 
-            <article>
+            <article id="short">
                 <p>I videotape every customer that comes in here, so that I may blackmail them later. 
                     Say what? They're like sex, except I'm having them! Who are you, my warranty?! Oh, 
                     I think we should just stay friends.
@@ -66,7 +66,7 @@
                     Slurms McKenzie! Oh sure! Blame the wizards!</p>
             </article>
 
-            <img src="images/fry.jpg">
+            <img src="images/fry.jpg" alt="Fry">
 
             <article>
                 <p>Wow! A superpowers drug you can just rub onto your skin? You'd think it would be 
@@ -105,11 +105,11 @@
                 </p>
             </article>
             
-            <img src="images/team.jpg">
+            <img src="images/team.jpg" alt="the crew and friends">
         </main>
 
         <footer>
-            <p>&#169;Adam Duhamel<br>special thanks http://fillerama.io/</p>
+            <p>&#169;Adam Duhamel<br>special thanks: <a href="http://fillerama.io/">http://fillerama.io/</a></p>
         </footer>
     </body>
 </html>
